--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
 <body>
 	<!-- NAVIGATION -->
 	<header>
-		<nav class="navbar navbar-expand-lg static-top navbar-dark bg-dark" id="test-navbar">
+		<nav class="navbar navbar-expand-lg static-top navbar-dark bg-dark justify-content-right" id="test-navbar">
 			<a class="navbar-brand" href="index.html">Anna Janiak</a>
 			<button class="navbar-toggler ml-auto" type="button" data-toggle="collapse"
                 data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02"
                 aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-			<div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+			<div class="collapse navbar-collapse text-right" id="navbarTogglerDemo02">
 				<ul class="navbar-nav ml-auto">
 					<li class="nav-item">
 						<a class="nav-link" href="#tech">TECH
@@ -164,35 +164,36 @@
 				</div>
 				<!-- /Card deck -->
 			</div>
-		</div>
 
-		<!--PROGRESS SKILLS TECH-->
-		<div class="wrapper">
-			<div class="container">
-				<div class="row">
-					<div class="col-md-12">
-						<div class="skillbar" data-percent="55%">
-							<div class="skillbar-title">HTML/HTML5</div>
-							<div class="skill-bar-percent">55%</div>
-							<div class="skillbar-bar" style="width: 55%;"></div>
-						</div>
 
-						<div class="skillbar" data-percent="80%">
-							<div class="skillbar-title">CSS/CSS3</div>
-							<div class="skill-bar-percent">80%</div>
-							<div class="skillbar-bar" style="width: 80%;"></div>
-						</div>
+			<!--PROGRESS SKILLS TECH-->
+			<div class="wrapper">
+				<div class="container">
+					<div class="row">
+						<div class="col-md-12">
+							<div class="skillbar" data-percent="55%">
+								<div class="skillbar-title">HTML/HTML5</div>
+								<div class="skill-bar-percent">55%</div>
+								<div class="skillbar-bar" style="width: 55%;"></div>
+							</div>
 
-						<div class="skillbar" data-percent="40%">
-							<div class="skillbar-title">JavaScript</div>
-							<div class="skill-bar-percent">40%</div>
-							<div class="skillbar-bar" style="width: 40%;"></div>
-						</div>
+							<div class="skillbar" data-percent="80%">
+								<div class="skillbar-title">CSS/CSS3</div>
+								<div class="skill-bar-percent">80%</div>
+								<div class="skillbar-bar" style="width: 80%;"></div>
+							</div>
 
-						<div class="skillbar" data-percent="70%">
-							<div class="skillbar-title">Python</div>
-							<div class="skill-bar-percent">70%</div>
-							<div class="skillbar-bar" style="width: 70%;"></div>
+							<div class="skillbar" data-percent="40%">
+								<div class="skillbar-title">JavaScript</div>
+								<div class="skill-bar-percent">40%</div>
+								<div class="skillbar-bar" style="width: 40%;"></div>
+							</div>
+
+							<div class="skillbar" data-percent="70%">
+								<div class="skillbar-title">Python</div>
+								<div class="skill-bar-percent">70%</div>
+								<div class="skillbar-bar" style="width: 70%;"></div>
+							</div>
 						</div>
 					</div>
 				</div>
@@ -227,7 +228,7 @@
 										<button type="button" class="btn btn-outline-secondary" data-toggle="modal" data-target="#staticBackdropScrum">Video</button>
 
 										<!-- Modal -->
-										<div class="modal fade" id="staticBackdropScrum" data-backdrop="static" tabindex="-1"
+										<div class="modal fade" id="myModal" data-backdrop="static" tabindex="-1"
 											role="dialog" aria-labelledby="staticBackdropScrumLabel" aria-hidden="true">
 											<div class="modal-dialog" role="document">
 												<div class="modal-content">
@@ -280,15 +281,17 @@
 														<h5 class="modal-title" id="staticBackdropLabel">SAFe 5.0
 															overview
 														</h5>
-														<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span>
+														<button type="button" class="close staticBackdrop-close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span>
                                                              </button>
 													</div>
 													<div class="modal-body">
-														<iframe width="420" height="345"
+														<iframe id="staticBackdrop-iframe" width="420" height="345"
 															src="https://www.youtube.com/embed/tgbNymZ7vqY"></iframe>
-													</div>
-													<div class="modal-footer">
-														<button type="button" class="btn btn-outline-secondary" data-dismiss="modal">Close</button>
+                                                            https://www.youtube.com/embed/v=aW2m-BtCJyE&t=2s
+
+														<div class="modal-footer">
+															<button type="button" class="btn btn-outline-secondary close staticBackdrop-close" id="staticBackdrop-close" data-dismiss="modal">Close</button>
+														</div>
 													</div>
 												</div>
 											</div>
@@ -296,59 +299,101 @@
 									</div>
 							</div>
 						</div>
+						<!-- /Card -->
 					</div>
-					<!-- /Card -->
-				</div>
-				<!-- /Card deck -->
-			</div>
-		</div>
-		<!-- SKILL BAR AGILE -->
-		<div class="wrapper">
-			<div class="container">
-				<div class="row">
-					<div class="col-md-12">
-						<div class="skillbar" data-percent="80%">
-							<div class="skillbar-title">SCRUM</div>
-							<div class="skill-bar-percent">80%</div>
-							<div class="skillbar-bar" style="width: 80%;"></div>
-						</div>
-						<div class="skillbar" data-percent="80%">
-							<div class="skillbar-title">KANBAN</div>
-							<div class="skill-bar-percent">80%</div>
-							<div class="skillbar-bar" style="width: 80%;"></div>
-						</div>
-						<div class="skillbar" data-percent="70%">
-							<div class="skillbar-title">SAFe</div>
-							<div class="skill-bar-percent">70%</div>
-							<div class="skillbar-bar" style="width: 70%;"></div>
-						</div>
-
-					</div>
+					<!-- /Card deck -->
 				</div>
 			</div>
-		</div>
-
-		<!--CONTACT PAGE-->
-		<!--CONTACT IMAGE-->
-		<div class="container-fluid" id="contact">
-			<div class="row">
-				<div class="col-sm-12">
-					<div class="contact-image image"></div>
-				</div>
-			</div>
-
-			<!--CONTACT FORM-->
-			<section class="contact">
+			<!-- SKILL BAR AGILE -->
+			<div class="wrapper">
 				<div class="container">
-					<div class="row justify-content-center">
-						<div class="col-sm-6 contact-map">
-							<iframe width="100%" height="400px;" frameborder="0" style="border:0"
-								src="https://maps.google.com/maps?width=500&amp;height=400&amp;hl=en&amp;q=Kista%2C%20Stockholm+(Address)&amp;ie=UTF8&amp;t=p&amp;z=9&amp;iwloc=B&amp;output=embed"
-								allowfullscreen></iframe>
+					<div class="row">
+						<div class="col-md-12">
+							<div class="skillbar" data-percent="80%">
+								<div class="skillbar-title">SCRUM</div>
+								<div class="skill-bar-percent">80%</div>
+								<div class="skillbar-bar" style="width: 80%;"></div>
+							</div>
+							<div class="skillbar" data-percent="80%">
+								<div class="skillbar-title">KANBAN</div>
+								<div class="skill-bar-percent">80%</div>
+								<div class="skillbar-bar" style="width: 80%;"></div>
+							</div>
+							<div class="skillbar" data-percent="70%">
+								<div class="skillbar-title">SAFe</div>
+								<div class="skill-bar-percent">70%</div>
+								<div class="skillbar-bar" style="width: 70%;"></div>
+							</div>
+
 						</div>
-						<div class="col-sm-6">
-							<div class="form-box">
-								<h1>Get in touch</h1>
+					</div>
+				</div>
+			</div>
+
+			<!--CONTACT PAGE-->
+			<!--CONTACT IMAGE-->
+			<div class="container-fluid" id="contact">
+				<div class="row">
+					<div class="col-sm-12">
+						<div class="contact-image image"></div>
+					</div>
+				</div>
+
+				<!--CONTACT FORM-->
+				<section class="contact">
+					<div class="container">
+						<div class="row justify-content-center">
+							<div class="col-sm-6 contact-map">
+								<!-- <iframe src="https://maps.google.com/maps?width=500&amp;height=400&amp;hl=en&amp;q=Kista%2C%20Stockholm+(Address)&amp;ie=UTF8&amp;t=p&amp;z=9&amp;iwloc=B&amp;output=embed"
+								allowfullscreen></iframe> -->
+
+								<!-- <div class="embed-responsive embed-responsive-16by9"> -->
+								<iframe class="embed-responsive-item"
+									src="https://maps.google.com/maps?width=500&amp;height=400&amp;hl=en&amp;q=Kista%2C%20Stockholm+(Address)&amp;ie=UTF8&amp;t=p&amp;z=9&amp;iwloc=B&amp;output=embed"
+									allowfullscreen></iframe>
+								<!-- </div> -->
+
+
+							</div>
+							<div class="col-sm-6">
+								<div class="form-box">
+									<h2>Get in touch</h2>
+									<hr>
+									<div class="col-sm-6 contact-info">
+                                    <button type="button" data-toggle="modal" data-target="#contact-model">Launch modal</button>
+
+										<div class="modal" tabindex="-1" role="dialog" id="contact-model">
+											<div class="modal-dialog" role="document">
+												<div class="modal-content">
+													<div class="modal-header">
+														<h5 class="modal-title">Modal title</h5>
+														<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+													</div>
+													<div class="modal-body">
+														<p>Modal body text goes here.</p>
+													</div>
+													<div class="modal-footer">
+														<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+														<button type="button" class="btn btn-primary">Save changes</button>
+													</div>
+												</div>
+											</div>
+										</div>
+
+
+
+										<!-- <div class="phone">
+										<p><i class="fas fa-phone"></i> +46 793360854</p>
+									</div>
+									<div class="email "> -->
+										<!-- <ul class="list-unstyled-contact"> -->
+										<!-- <p> <i class="fas fa-at"></i> anna.janiak@yahoo.pl</p> -->
+
+										<!-- </ul> -->
+									</div>
+								</div>
 								<p>Drop me a message</p>
 								<hr>
 								<form action="https://api.formbucket.com/f/c2K3QTQ" method="post">
@@ -364,65 +409,55 @@
 												<label for="message">Message</label>
 												<textarea class="form-control" id="message" name="Message"></textarea>
 											</div>
-											<input class="btn btn-outline-secondary" type="submit" value="Submit" required="required"/>
-    </div>
-								</form>
+											<input class="btn btn-outline-secondary" type="submit" value="Submit"/>
+
+										</form>
+										</div>
+									</div>
 							</div>
-						</div>
-					</div>
-				</div>
-			</section>
+
+				</section>
+			</div>
 		</div>
-	</div>
-	<!--FOOTER-->
-	<footer id="sticky-footer" class="py-4 bg-dark text-white-50">
-		<div class="container-fluid text-center">
-			<div class="row">
-				<div class="col-sm-4 download">
-					<small><a href="assets/cv/cvAnnaJaniakJansson.pdf" target="_blank"> Download CV.pdf
+		<!--FOOTER-->
+		<footer id="sticky-footer" class="py-4 bg-dark text-white-50">
+			<div class="container-fluid text-center">
+				<div class="row">
+					<div class="col-sm-4 download">
+						<small><a href="assets/cv/cvAnnaJaniakJansson.pdf" target="_blank"> Download CV.pdf
 							<i class="fas fa-download"></i></a></small><br>
                             </div>
-					<div class="col-sm-4 social">
-						<ul class="list-inline list-unstyled">
-							<li class="list-inline-item">
-								<a href="https://www.linkedin.com/in/anna-j-605a40177/"
-									target="_blank"><i class="fab fa-linkedin-in"></i>
-								</a>
-							</li>
-							<li class="list-inline-item">
-								<a href="https://github.com/annaweronica?tab=repositories"
-									target="_blank"><i class="fab fa-github"></i>
-								</a>
-							</li>
-							<li class="list-inline-item">
-								<a href="https://www.meetup.com/members/276920213/"
-									target="_blank"><i class="fab fa-meetup"></i>
-								</a>
-							</li>
-						</ul>
+						<div class="col-sm-4 social">
+							<ul class="list-inline list-unstyled">
+								<li class="list-inline-item">
+									<a href="https://www.linkedin.com/in/anna-j-605a40177/"
+										target="_blank"><i class="fab fa-linkedin-in"></i>
+									</a>
+								</li>
+								<li class="list-inline-item">
+									<a href="https://github.com/annaweronica?tab=repositories"
+										target="_blank"><i class="fab fa-github"></i>
+									</a>
+								</li>
+								<li class="list-inline-item">
+									<a href="https://www.meetup.com/members/276920213/"
+										target="_blank"><i class="fab fa-meetup"></i>
+									</a>
+								</li>
+							</ul>
+						</div>
+
 					</div>
-					<div class="col-sm-4 contact-info">
-                    <div class="phone">
-                    	<p><i class="fas fa-phone"></i> +46 793360854</p>
-                    </div>
-						<div class="email ">
-							<!-- <ul class="list-unstyled-contact"> -->
-								<p> <i class="fas fa-at"></i> anna.janiak@yahoo.pl</p>
-							
-							<!-- </ul> -->
+					<div class="row">
+						<div class="col-sm-12">
+							<span class="copy-right">
+				<small>Copyright &copy; Anna Janiak</small>
+                </span>
 						</div>
 					</div>
 				</div>
-				<div class="row">
-					<div class="col-sm-12">
-						<span class="copy-right">
-				<small>Copyright &copy; Anna Janiak</small>
-                </span>
-					</div>
-				</div>
-			</div>
 
-	</footer>
+		</footer>
 	</div>
 	<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
 		integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous">
@@ -436,6 +471,21 @@
 	<script>
 		$('body').scrollspy({ target: '#test-navbar' })
 	</script>
+	<!-- <script type="text/javascript">
+		$('#staticBackdrop').on('hidden.bs.modal', function () {
+        callPlayer('yt-player', 'stopVideo');
+    });
+	</script> -->
+
+	<script>
+		// Credit: https://stackoverflow.com/questions/13598423/stop-all-playing-iframe-videos-on-click-a-link-javascript
+        $(function(){
+            $('.staticBackdrop-close').click(function(){      
+                $('#staticBackdrop-iframe').attr('src', $('#staticBackdrop-iframe').attr('src'));
+            });
+        });
+	</script>
+
 </body>
 
 </html>
